syntax = "proto3";

option csharp_namespace = "StoreAPI_client_grpc_.Protos";

service APIOrderService {
  
  rpc MakeOrder(OrderDetail) returns (OrderResponse);
}

message OrderDetail {
	int32 CustomerId = 1;
	repeated Product Products = 2;
}

message Product {
	int32 ProductId = 1;
	int32 ProductQuantity = 2;
}

message OrderResponse {
	bool ResponseMessage = 1;
	string Message = 2;
}
